fix(alerts): address latest Feishu review feedback